--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.15"
   },
-  "homepage": "https://blackeichi.github.io/jwreactcalss"
+  "homepage": "https://blackeichi.github.io/jwreactclass"
 }
