--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "apexcharts": "^3.29.0",
+    "framer-motion": "^6.2.8",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.17.5",
+    "react-hook-form": "^7.28.1",
     "react-query": "^3.27.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
